--- a/RevProject2/src/main/resources/application.properties
+++ b/RevProject2/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://kweldb.c4zod4lc7ws5.us-east-2.rds.amazonaws.com:3306/Project2?user=admin&password=password
