--- a/RevProject2/pom.xml
+++ b/RevProject2/pom.xml
@@ -44,6 +44,17 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		 <dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-aop</artifactId>
+		    <version>5.1.5.RELEASE</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+		<dependency>
+		    <groupId>org.aspectj</groupId>
+		    <artifactId>aspectjweaver</artifactId>
+		    <version>1.9.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
